--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
-        "symfony/var-dumper": "2.7.*"
+        "symfony/var-dumper": "2.7.*",
+        "squizlabs/php_codesniffer": "2.*"
     },
     "autoload": {
         "psr-4": {
